<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.CreateChallengeFragment">

    <EditText
        android:textSize="16dp"
        android:padding="10dp"
        android:background="@drawable/bg_edt"
        android:hint="@string/txt_challenge_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:textSize="16dp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:background="@drawable/bg_edt"
        android:hint="@string/txt_starts_on"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <EditText
        android:textSize="16dp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:background="@drawable/bg_edt"
        android:hint="@string/txt_challenge_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <Button
        android:textSize="16dp"
        android:padding="10dp"
        android:layout_gravity="end"
        android:background="@drawable/bg_edt"
        android:hint="@string/txt_create_a_challenge"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>